--- a/portfolio.html
+++ b/portfolio.html
@@ -46,9 +46,9 @@
     <div class="mobile-menu" data-menu>
         <ul class="mobile-menu__nav-list">
             <li class="mobile-menu__nav-item"><a href="index.html"
-                    class="mobile-menu__nav-links hover-focus current-mobile">Студия</a></li>
+                    class="mobile-menu__nav-links hover-focus ">Студия</a></li>
             <li class="mobile-menu__nav-item"><a href="portfolio.html"
-                    class="mobile-menu__nav-links hover-focus">Портфолио</a></li>
+                    class="mobile-menu__nav-links hover-focus current-mobile">Портфолио</a></li>
             <li class="mobile-menu__nav-item"><a href="cotacts.html" class="mobile-menu__nav-links hover-focus">Контакты</a>
             </li>
         </ul>
